--- a/src/components/Breeds/Breeds.module.scss
+++ b/src/components/Breeds/Breeds.module.scss
@@ -45,7 +45,8 @@
     margin-top: 20px;
     text-decoration: none;
 
-    &:hover p, &:hover .icon {
+    &:hover p,
+    &:hover .icon {
         text-decoration: underline rgba(41, 21, 7, 0.6);
         cursor: pointer;
     }
@@ -71,7 +72,6 @@
 }
 
 .photo {
-    
 }
 
 .photo img {
@@ -97,4 +97,45 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
+}
+// Mobile
+@media (max-width: 46.1875em) {
+    .wrapper {
+        width: 100%;
+        height: 1050px;
+        margin-top: -88px;
+    }
+    .inner:first-child {
+        font-size: 30px;
+    }
+    .bar {
+        width: 100px;
+    }
+    .inner p:nth-child(3) {
+        font-size: 45px;
+    }
+    .more p {
+        font-size: 25px;
+    }
+    .icon {
+        width: 25px;
+        height: 25px;
+    }
+    .photos {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: auto auto;
+        gap: 30px 50px ;
+        margin-top: 40px;
+    }
+    .photo img {
+        width: 320px;
+        height: 320px;
+    }
+    .name {
+        font-size: 30px;
+    }
 }
