--- a/src/components/CatBenefits/CatBenefits.module.scss
+++ b/src/components/CatBenefits/CatBenefits.module.scss
@@ -110,3 +110,43 @@
     grid-area: img3;
     width: 200px;
 }
+
+/* RESPONSIVE */
+//Tablet
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
+}
+// Mobile
+@media (max-width: 46.1875em) {
+    .wrapper {
+        width: 800px;
+        height: 374px;
+        margin-top: 150px;
+    }
+    .inner {
+        display: flex;
+        flex-direction: column;
+    }
+    .bar {
+        width: 200px;
+        height: 5px;
+    }
+    .question {
+        font-size: 50x;
+    }
+    .photos {
+        width: 500px;
+    }
+    .photos img {
+        width: 80%;
+    }
+    .img1 {
+        width: 300px;
+        display: flex;
+        justify-content: end;
+    }
+    .img2 {
+        display: flex;
+        justify-content: end;
+        height: 300px;
+    }
+}
