--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -117,4 +117,59 @@
 
 .noResult {
     margin-left: 30px;
+    background-color: transparent !important;
+    cursor: context-menu !important;
+}
+
+/* RESPONSIVE */
+//Tablet
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
+}
+// Mobile
+@media (max-width: 46.1875em) {
+    .wrapper {
+        width: 100%;
+        height: 374px;
+    }
+    .inner {
+        margin-left: 80px;
+        margin-top: -40px;
+        width: 300px;
+    }
+    .logo {
+        width: 90%;
+    }
+    .logo p {
+        font-size: 50px;
+    }
+    .logo img {
+        width: 70px;
+    }
+    .inner > p {
+        font-size: 25px;
+        margin-top: 0;
+    }
+    .search {
+        width: 300px;
+        height: 60px;
+        margin-top: 30px;
+        padding: 0 10px;
+    }
+    .results {
+        width: 300px;
+    }
+    .results p {
+        font-size: 18px;
+    }
+    .magnifyingGlass {
+        font-size: 22px;
+        margin: 0 15px 0 15px;
+    }
+    .clear {
+        width: 14px;
+        height: 14px;
+    }
+    .noResult {
+        font-size: 18px;
+    }
 }
