--- a/src/components/Breeds/Breeds.module.scss
+++ b/src/components/Breeds/Breeds.module.scss
@@ -46,7 +46,7 @@
     text-decoration: none;
 
     &:hover p,
-    &:hover .icon {
+    &:hover .icon, &:active .icon {
         text-decoration: underline rgba(41, 21, 7, 0.6);
         cursor: pointer;
     }
@@ -99,43 +99,42 @@
     justify-content: center;
 }
 
-@media (min-width: 46.25em) and (max-width: 63.9375em) {
+@media (min-width: 641px) and (max-width: 960px) {
 }
 // Mobile
-@media (max-width: 46.1875em) {
+@media (max-width: 640px) {
     .wrapper {
-        width: 100%;
-        height: 1050px;
-        margin-top: -88px;
+        width: 90%;
+        height: 530px;
     }
     .inner:first-child {
-        font-size: 30px;
+        font-size: 12px;
     }
     .bar {
-        width: 100px;
+        width: 40px;
     }
     .inner p:nth-child(3) {
-        font-size: 45px;
+        font-size: 18px;
     }
     .more p {
-        font-size: 25px;
+        font-size: 10px;
     }
     .icon {
-        width: 25px;
-        height: 25px;
+        width: 10px;
+        height: 10px;
     }
     .photos {
         display: grid;
         justify-content: center;
         grid-template-columns: auto auto;
-        gap: 30px 50px ;
-        margin-top: 40px;
+        gap: 15px 20px ;
+        margin-top: 20px;
     }
     .photo img {
-        width: 320px;
-        height: 320px;
+        width: 145px;
+        height: 145px;
     }
     .name {
-        font-size: 30px;
+        font-size: 12px;
     }
 }
