--- a/src/components/CatBenefits/CatBenefits.module.scss
+++ b/src/components/CatBenefits/CatBenefits.module.scss
@@ -52,7 +52,7 @@
     text-decoration: none;
 
     &:hover p,
-    &:hover .icon {
+    &:hover .icon, &:active .icon {
         text-decoration: underline;
         cursor: pointer;
     }
@@ -113,13 +113,12 @@
 
 /* RESPONSIVE */
 //Tablet
-@media (min-width: 46.25em) and (max-width: 63.9375em) {
+@media (min-width: 641px) and (max-width: 960px) {
 }
 // Mobile
-@media (max-width: 46.1875em) {
+@media (max-width: 640px) {
     .wrapper {
-        width: 800px;
-        height: 374px;
+        width: 90%;
         margin-top: 150px;
     }
     .inner {
@@ -127,26 +126,59 @@
         flex-direction: column;
     }
     .bar {
-        width: 200px;
+        width: 70px;
         height: 5px;
     }
     .question {
-        font-size: 50x;
+
+        font-size: 38px;
+        margin-top: 10px;
+    }
+    .answer {
+        font-size: 18px;
+    }
+    .more {
+        height: 0px;
+        justify-content: end;
+    }
+    .more p {
+        font-size: 12px;
+    }
+    .more .icon {
+        width: 20px;
+        height: 20px;
     }
     .photos {
-        width: 500px;
+        height: 300px;
+        grid-template-columns: auto auto auto ;
+        grid-template-rows: auto auto auto auto;
+        grid-template-areas:
+            'img1 img1 img3 '
+            'img2 img2 img3 '
+            'img2 img2 img3 '
+            'img2 img2 img3 ';
+        gap: 12px 0;
+        margin-top: 20px;
     }
     .photos img {
         width: 80%;
     }
     .img1 {
-        width: 300px;
+        width: 172px;
+        height: 105px;
         display: flex;
-        justify-content: end;
+        justify-content: start;
     }
     .img2 {
+        width: 124px;
+        height: 184px;
         display: flex;
-        justify-content: end;
-        height: 300px;
+        justify-content: start;
+    }
+    .img3 {
+        width: 150px;
+        height: 242px;
+        display: flex;
+        justify-content: start;
     }
 }
