--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -123,53 +123,71 @@
 
 /* RESPONSIVE */
 //Tablet
-@media (min-width: 46.25em) and (max-width: 63.9375em) {
+@media (min-width: 641px) and (max-width: 960px) {
 }
 // Mobile
-@media (max-width: 46.1875em) {
+@media (max-width: 640px) {
     .wrapper {
-        width: 100%;
-        height: 374px;
+        width: 90%;
+        height: 95px;
     }
     .inner {
-        margin-left: 80px;
-        margin-top: -40px;
-        width: 300px;
+        width: 40%;
+        margin: -50px 0 0 30px;
     }
     .logo {
-        width: 90%;
+        width: 50px;
+        height: 20px;
+        gap: 15px;
     }
     .logo p {
-        font-size: 50px;
+        font-size: 15px;
     }
     .logo img {
-        width: 70px;
+        width: 25px;
+        margin: 0 0 10px 0;
     }
     .inner > p {
-        font-size: 25px;
-        margin-top: 0;
+        font-size: 10px;
+        margin-top: 10px;
+        height: 20px;
     }
     .search {
-        width: 300px;
-        height: 60px;
-        margin-top: 30px;
-        padding: 0 10px;
+        width: 130px;
+        height: 30px;
+        border-radius: 60px;
+        margin-top: 20px;
+    }
+    .search input {
+        font-size: 12px;
+        width: 42px;
+    }
+    .searchBtn svg {
+        width: 15px;
+        height: 15px;
     }
     .results {
-        width: 300px;
+        width: 170px;
+        margin: 0 0 0 -5px;
     }
     .results p {
-        font-size: 18px;
+        font-size: 12px;
+    }
+    .result {
+        width: 100%;
+        height: 35px;
     }
     .magnifyingGlass {
-        font-size: 22px;
-        margin: 0 15px 0 15px;
+        font-size: 12px;
+        margin: 0 5px 0 10px;
     }
     .clear {
-        width: 14px;
-        height: 14px;
+        width: 10px;
+        height: 10px;
+        margin-top: 15px;
     }
     .noResult {
-        font-size: 18px;
+        font-size: 12px;
+        width: 130px;
     }
 }
