--- a/src/components/SpecificBenefits/SpecificBenefits.module.scss
+++ b/src/components/SpecificBenefits/SpecificBenefits.module.scss
@@ -51,7 +51,7 @@
     justify-content: center;
     flex-direction: column;
     gap: 30px;
-    margin-top: 30px;
+    margin: 30px 0 30px 0;
 }
 
 .benefit {
@@ -59,7 +59,6 @@
     height: 20%;
     border-radius: 50px;
     background-color: #fff;
-    // padding: 0 20px 0 20px;
 
     display: flex;
     align-items: center;
@@ -92,8 +91,48 @@
     width: 80%;
     margin-right: 30px;
 }
+.text {
+    width: 100%;
+}
 .text p {
     color: #291507;
     font-size: 20px;
     font-weight: 500;
+}
+
+/* RESPONSIVE */
+//Tablet
+@media (min-width: 641px) and (max-width: 960px) {
+}
+// Mobile
+@media (max-width: 640px) {
+    .wrapper {
+        width: 90%;
+        height: 800px;
+    }
+    .inner {
+        height: 85%;
+    }
+    .title {
+        gap: 10px;
+        margin-top: 30px;
+    }
+    .title p {
+        font-size: 20px;
+    }
+    .title img {
+        display: none;
+    }
+    .benefit {
+        height: 80px;
+    }
+    .benefit img {
+        display: none;
+    }
+    .text {
+        margin-left: 25px;
+    }
+    .text p {
+        font-size: 15px;
+    }
 }
