--- a/src/components/Information/Information.module.scss
+++ b/src/components/Information/Information.module.scss
@@ -87,13 +87,12 @@
 .front {
     transform: rotateY(180deg);
     color: white;
-    background-color: #E3E1DC;
+    background-color: #e3e1dc;
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 
 .frontContent {
     position: absolute;
@@ -222,7 +221,6 @@
     }
 }
 
-
 /* RESPONSIVE */
 //Tablet
 @media (min-width: 641px) and (max-width: 960px) {
@@ -235,6 +233,13 @@
     .illustration {
         flex-direction: column;
         gap: 40px;
+        align-items: center;
+    }
+    .mainPhoto {
+        width: 100%;
+        height: 350px;
+        display: flex;
+        justify-content: center !important;
     }
     .pad {
         display: none;
@@ -263,7 +268,7 @@
         font-size: 30px;
     }
     .photos {
-        grid-template-columns: auto auto ;
+        grid-template-columns: auto auto;
         justify-content: center;
         gap: 20px 20px;
     }
